# dahdidahdit

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.github/: FUNDING.yml
app/: .gitignore  LICENSE.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-audio-jni.c
app/src/main/res/drawable/: ic_frownie.xml  ic_icon3_small_padding.xml  ic_intro_screen_bullet.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_outline_pause_circle_24.xml  ic_outline_play_circle_24.xml  ic_outline_stop_circle_24.xml  ic_paddle.xml  ic_slash.xml  ic_smiley.xml  inputbackground.xml  steno_0.xml  steno_1.xml  steno_2.xml  steno_3.xml  steno_4.xml  steno_5.xml  steno_6.xml  steno_7.xml  steno_8.xml  steno_9.xml  steno_a.xml  steno_b.xml  steno_c.xml  steno_comma.xml  steno_d.xml  steno_dash.xml  steno_dot.xml  steno_e.xml  steno_equal.xml  steno_f.xml  steno_g.xml  steno_h.xml  steno_i.xml  steno_j.xml  steno_k.xml  steno_l.xml  steno_m.xml  steno_n.xml  (+14 more)
app/src/main/res/drawable-anydpi/: ic_prefs_copytrainer.xml  thinborder.xml
app/src/main/res/layout/: activity_brass_pound.xml  activity_copy_grading.xml  activity_copy_trainer.xml  activity_find_new_char.xml  activity_graffiti_cheat_sheet.xml  activity_main.xml  (+19 more)
app/src/main/res/layout-night/: nav_header_main.xml
fastlane/: Appfile
fastlane/metadata/android/de/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
gradle/wrapper/: gradle-wrapper.properties
(+327 files in other folders)
